# DCore

./: CMakeLists.txt
cmake/: sitecustomize.py
python/: CMakeLists.txt  dcore.py  dcore_check.py  dcore_post.py  dcore_pre.py  dmft_core.py  hubbard_solver_matrix.py
test/: CMakeLists.txt
test/check_chain_alpsqmc/: CMakeLists.txt  check_chain_alpsqmc.py
test/check_chain_hubbardI/: CMakeLists.txt
test/check_chain_hubbardI_so/: CMakeLists.txt
test/check_chain_triqsqmc/: CMakeLists.txt
test/check_chain_triqsqmc_so/: CMakeLists.txt
test/main_chain_alpsqmc/: CMakeLists.txt
test/main_chain_hubbardI/: CMakeLists.txt  main_chain_hubbardI.py
test/main_chain_hubbardI_so/: CMakeLists.txt
test/main_chain_triqsqmc/: CMakeLists.txt
test/main_chain_triqsqmc_so/: CMakeLists.txt
test/openmx/: CMakeLists.txt  openmx.py
test/parser/: CMakeLists.txt  parser.py
test/post_chain_hubbardI/: CMakeLists.txt
test/post_chain_hubbardI_so/: CMakeLists.txt  post_chain_hubbardI_so.py
test/post_chain_triqsqmc/: CMakeLists.txt
test/post_chain_triqsqmc_so/: CMakeLists.txt
test/pre_preset/: CMakeLists.txt  pre_preset.py
test/pre_respack/: CMakeLists.txt
test/pre_respack_so/: CMakeLists.txt  pre_respack_so.py
test/pre_wannier/: CMakeLists.txt  pre_wannier.py
test/pre_wannier_so/: CMakeLists.txt  pre_wannier_so.py
test/respack/: CMakeLists.txt  respack.py
